map z-index issue fixed

--- a/css/app.css
+++ b/css/app.css
@@ -277,6 +277,7 @@ countdown
         margin-top: 23%;
         position: fixed;
         width: 100%;
+        z-index: 4;
     }
 }
 
